# NetworkTechnologies

./: .gitignore  README.md
Places/: README.md  api_keys  build.gradle  settings.gradle
Places/src/main/java/org/example/: Main.java  Places.java  PlacesInterface.java  Utils.java
ftpv2/ftpv2_client/: CMakeLists.txt  README.md
ftpv2/ftpv2_client/src/backend/: main.cpp
ftpv2/ftpv2_server/: CMakeLists.txt  README.md
ftpv2/ftpv2_server/src/backend/: client_info.cpp  connection.cpp  ftpv2_server.cpp  main.cpp
ftpv2/ftpv2_server/src/include/: client_info.h  connection.h  ftpv2_server.h
proxy/: CMakeLists.txt  README.md
proxy/src/backend/: connection.cpp  main.cpp  proxy_server.cpp
proxy/src/include/: connection.h  connection_pool.h  proxy_const.h  proxy_server.h
selfdetecting/: CMakeLists.txt  README.md  main  main.cpp  selfdetector  selfdetector.cpp
selfdetecting/src/backend/: multicast_receiver.cpp  multicast_sender.cpp  selfdetector.cpp
selfdetecting/src/include/: multicast_receiver.h  multicast_sender.h
